--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lesson4-banana</title>
-    
+    <title>Banana talk</title>
+    <style>
+        textarea{
+            display: block;
+            height: 15vh;
+            width:70%; 
+            margin:1rem 1rem;
+            padding:1rem 2rem;       
+        }
+        #output{
+
+            border:1px solid black;
+            height:15vh;
+            width:80%;
+            margin:1rem;
+            padding:1rem;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>Banana Talk</h1>
+    <h1>Banana talk</h1>
+    <textarea  id="txt-input" placeholder="Enter the text that you want to convert"></textarea>
     <button id="btn-translate">Translate</button>
-
+    <div style="font-size: larger;">Output will come here 👇 </div>
+    <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
