--- a/index.html
+++ b/index.html
@@ -5,23 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana talk</title>
+    <link href="style.css" rel="stylesheet">
     <style>
-        textarea{
-            display: block;
-            height: 15vh;
-            width:70%; 
-            margin:1rem 1rem;
-            padding:1rem 2rem;       
-        }
-        #output{
-
-            border:1px solid black;
-            height:15vh;
-            width:80%;
-            margin:1rem;
-            padding:1rem;
-
-        }
+       
     </style>
 </head>
 <body>
