--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     </style>
 </head>
 <body>
-    <h1>Banana talk</h1>
+    <header >
+    <h1 class="header-heading">Banana talk</h1>
+     </header>
     <textarea  id="txt-input" placeholder="Enter the text that you want to convert"></textarea>
     <button id="btn-translate">Translate</button>
-    <div style="font-size: larger;">Output will come here 👇 </div>
+    <div  class="above-output-heading" style="font-size: larger;">Output will come here 👇 </div>
     <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
