added footer and applied  css on it

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <button id="btn-translate">Translate</button>
     <div  class="above-output-heading" style="font-size: larger;">Output will come here 👇 </div>
     <div id="output"></div>
+
+    <footer>
+        <div class="footer-div">
+        <h1 class="footer-heading">Translate Into Banana</h1>
+       
+            <p class="footer-heading">Make your learning joyfull with us.Learn Banana language using this app and translate it. Have fun in learning. </p>
+            <h2 class="footer-heading">Happy learning.</h2>
+        </div>
+    </footer>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
